# PamAuth

./: .gitignore  .tasks  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  rust.yml
src/: check_pin.rs  genpin.rs  lib.rs
tests/: integration.rs
