[package]
name = "pin-auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check_pin"
path = "src/check_pin.rs"

[[bin]]
name = "genpin"
path = "src/genpin.rs"

[dependencies]
anyhow = "1"
rand = "0.8"
rpassword = "7"
nix = { version = "0.28", default-features = false, features = ["user", "fs"] }
sha-crypt = { version = "0.5", optional = true }
argon2 = { version = "0.5", optional = true, default-features = false, features = ["alloc"] }
zeroize = { version = "1", features = ["alloc"] }
syslog = { version = "6", optional = true }

[lib]
name = "pin_auth"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"

[features]
default = ["sha-crypt"]
sha-crypt = ["dep:sha-crypt"]
argon2 = ["dep:argon2"]
syslog = ["dep:syslog"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
